AC_INIT([polymake_wrapper.cc])

OUTPUT_MAKEFILES=""

AC_CHECK_PROG([PMCONFIG],[polymake-config],[1],[0])
if test $PMCONFIG = "1"; then
  AC_MSG_CHECKING([whether polymake is up-to-date])
  SUPPORTEDPOLYMAKEVERSION="212"
  CURRENTPOLYMAKEVERSION=`polymake-config --version | cut -c -4 -| sed s'/\.//'`
  if test $CURRENTPOLYMAKEVERSION -ge $SUPPORTEDPOLYMAKEVERSION; then
    AC_MSG_RESULT([yes])
    OUTPUT_MAKEFILES="${OUTPUT_MAKEFILES} Makefile"
  else
    AC_MSG_RESULT([no])
    AC_MSG_ERROR([outdated polymake version])
  fi
else
  AC_MSG_RESULT([no])
  AC_MSG_ERROR([polymake not installed])
fi
AC_PROG_CXX
AC_OUTPUT(${OUTPUT_MAKEFILES})
